--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 				var inches = $("#inches").val();
 				var height = (parseInt(feet) * 12) + parseInt(inches);
 				console.log(height);
-				var squareHeight = height * height;
-				var bmi = (Math.round((weight/squareHeight) * 703).toFixed(1));
+				var bmi = (Math.round((weight/Math.pow(height, 2)) * 703).toFixed(1));
 				document.getElementById("bmi").innerText = "Your BMI is "+bmi + ".";
-				console.log(feet,inches,weight, bmi)
+				console.log(feet,inches,weight,bmi)
 			}
 		</script>
 	</head>
