--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
 								</div>
 							</div>
 							<div class="row">
-								<button class="button" onclick="calculate()">Calculate
-									</button>
+								<button class="button" onclick="calculate()">Calculate</button>
 							</div>
 							<div class="row">
 								<div id="bmi">				
