--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				var feet = $("#feet").val();
 				var inches = $("#inches").val();
 				var height = (parseInt(feet) * 12) + parseInt(inches);
-				var bmi = (Math.round((weight/Math.pow(height, 2)) * 703).toFixed(1));
+				var bmi = ((weight/Math.pow(height, 2)) * 703).toFixed(1);
 				document.getElementById("bmi").innerText = "Your BMI is "+bmi + ".";
 			}
 		</script>
